# dimless

./: .devcontainer.json  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
numbers/: reynolds.json  strouhal.json
scripts/: generate_site.py
site/: hugo.toml
site/content/: _index.md
site/layouts/_partials/docs/inject/: head.html
src/dimless/: __init__.py
src/dimless/data/: numbers.json  quantities.json
src/dimless/data/numbers/: euler.json  froude.json
tests/: test_dimless.py
